fix pagination in dark mode

--- a/app/assets/stylesheets/bootstrap_variable_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_variable_overrides.css.scss
@@ -22,6 +22,11 @@ $input-disabled-bg: $background;
 $input-border-color: $outline;
 $form-select-indicator-color: $on-background;
 
+// pagination
+$pagination-bg: $surface;
+$pagination-hover-bg: $surface;
+$pagination-disabled-bg: $background;
+
 $table-border-color: $divider;
 
 // disable rfs
